--- a/estilos/style.css
+++ b/estilos/style.css
@@ -12,13 +12,22 @@
     --cor2: #FFFFFF;
     --cor3: #00bfffc0;
     --cor4: #f5f5f5e0;
-    --cor5: #d9d9d9c9;
+    --cor5: #d9d9d9;
+}
+
+body {
+    background-image: url(/Images/v617batch2-bb-02-technology.jpg);
+    background-position: right;
+    background-repeat: no-repeat;
+    background-size: auto;
+
 }
 
 header {
     display: grid;
     grid-template-rows: 60% 40%;
-    background-image: url(/Images/tech_comp01-900x600-desfoq.png);
+    background-image: url(/Images/tech_comp01.jpg);
+    background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -36,6 +45,11 @@ header>h1 {
     align-self: center;
     text-shadow: 4px 2px 3px rgba(0, 0, 0, 0.397);
     text-align: center;
+}
+
+header>menu>nav {
+    max-width: 400px;
+    margin: auto;
 }
 
 header>menu>nav>li {
@@ -63,7 +77,15 @@ header>menu>nav>li>a {
 }
 
 main {
+    min-width: 230px;
+    max-width: 400px;
+    margin: auto;
     background-color: var(--cor5);
     padding: 10px;
     line-height: 1.8em;
+}
+
+main p {
+    text-indent: 12px;
+    text-justify: auto;
 }
