--- a/estilos/style.css
+++ b/estilos/style.css
@@ -16,7 +16,7 @@
 }
 
 body {
-    background-image: url(/Images/v617batch2-bb-02-technology.jpg);
+    background-image: url(/Images/);
     background-position: right;
     background-repeat: no-repeat;
     background-size: auto;
@@ -26,15 +26,18 @@ body {
 header {
     display: grid;
     grid-template-rows: 60% 40%;
+    background-color: #0A2540;
+
+    /*
     background-image: url(/Images/tech_comp01.jpg);
     background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
-    /*
     background-color: var(--cor3);
     */
+
     min-height: 600px;
     padding: 12px;
 }
@@ -77,15 +80,102 @@ header>menu>nav>li>a {
 }
 
 main {
-    min-width: 230px;
-    max-width: 400px;
+    min-width: 250px;
+    max-width: 500px;
     margin: auto;
     background-color: var(--cor5);
     padding: 10px;
     line-height: 1.8em;
 }
 
+main h3 {
+    color: var(--cor1);
+    text-decoration: 1px solid underline;
+    text-align: center;
+    padding: 10px;
+}
+
 main p {
     text-indent: 12px;
     text-justify: auto;
+}
+
+#tecn {
+    background-color: var(--cor2);
+    border-radius: 12px;
+    padding: 10px;
+    margin: 5px;
+}
+
+#tecn h2 {
+    text-align: center;
+    padding-bottom: 12px;
+}
+
+#tecn picture {
+    display: block;
+    border: 1px solid black;
+    width: 300px;
+    height: 250px;
+    margin: 20px auto 20px auto;
+    border-radius: 12px;
+}
+
+#tecn p {
+    padding: 6px;
+    line-height: 1.8em;
+}
+
+#tech-image {
+    background-image: url(/Images/tech_comp02.jpg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
+    margin: 30px -10px;
+
+    min-height: 600px;
+}
+
+#service {
+    display: grid;
+    grid-template-columns: repeat(3, 150px);
+    grid-template-rows: 200px, repeat(3, 500px);
+    padding: 12px;
+    border: 1px solid black;
+}
+
+#service h3 {
+    grid-column-start: 2;
+    grid-column-end: 3;
+}
+
+#service .Manut {
+    grid-column-start: 1;
+    grid-column-end: 4;
+}
+
+#service .Format {
+    grid-column-start: 1;
+    grid-column-end: 3;
+}
+
+#service .Limp {
+    grid-column-start: 1;
+    grid-column-end: 4;
+}
+
+#service>#box {
+    background-color: #0a2540bb;
+    color: white;
+    padding: 10px;
+    margin: 5px;
+    border-radius: 8px;
+}
+
+#service p {
+    grid-column-start: 1;
+    grid-column-end: 4;
+    text-align: center;
+    margin-top: 20px;
 }
