--- a/estilos/style.css
+++ b/estilos/style.css
@@ -139,15 +139,19 @@ main p {
 
 #service {
     display: grid;
-    grid-template-columns: repeat(3, 150px);
-    grid-template-rows: 200px, repeat(3, 500px);
+    grid-template-columns: 3fr;
+    grid-template-rows: 200px, 3fr;
     padding: 12px;
     border: 1px solid black;
 }
 
 #service h3 {
-    grid-column-start: 2;
-    grid-column-end: 3;
+    display: ;
+    text-align: center;
+}
+
+#service h4 {
+    text-align: center;
 }
 
 #service .Manut {
@@ -157,7 +161,7 @@ main p {
 
 #service .Format {
     grid-column-start: 1;
-    grid-column-end: 3;
+    grid-column-end: 4;
 }
 
 #service .Limp {
@@ -173,7 +177,7 @@ main p {
     border-radius: 8px;
 }
 
-#service p {
+#service>p {
     grid-column-start: 1;
     grid-column-end: 4;
     text-align: center;
